--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 runs filter=lfs diff=lfs merge=lfs -text
+runs/ResNet34_ep=100_bs=32_lr=5e-05_ld=0.9_wd=0/ResNet34_last.pth filter=lfs diff=lfs merge=lfs -text
+runs/ResNet34_ep=100_bs=32_lr=5e-05_ld=0.9_wd=0/ResNet34_best.pth filter=lfs diff=lfs merge=lfs -text
